--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
       <div id="controls">
         <button id="resetButton">Reset</button>
       </div>
+      <h3 id="status1"></h3>
       <div id="status"></div>
     </div>
     <!-- </div> -->
