Reverting the changes and corrections

--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chess Replica Pavana Vamsi</title>
+    <title>Mini Chess Pavana Vamsi</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="strategy.png" type="image/x-icon" />
   </head>
   <body>
     <div id="rules">
